--- a/app/src/main/res/layout/fragment_public__exams_.xml
+++ b/app/src/main/res/layout/fragment_public__exams_.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Public_Exams_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -18,19 +16,18 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
-                android:scrollbars="vertical"
                 android:divider="@null"
                 android:dividerHeight="20dp"
-                android:layout_marginBottom="60dp"
                 android:scrollbarSize="1dp"
+                android:layout_marginBottom="160dp"
                 />
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 
 
 
-</FrameLayout>
+
+</androidx.core.widget.NestedScrollView>
