--- a/app/src/main/res/layout/fragment_public__quizes_.xml
+++ b/app/src/main/res/layout/fragment_public__quizes_.xml
@@ -19,13 +19,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:scrollbars="vertical"
                 android:divider="@null"
                 android:dividerHeight="20dp"
                 android:scrollbarSize="1dp"
+                android:layout_marginBottom="160dp"
                 />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
