--- a/app/src/main/res/layout/fragment_public__exams_.xml
+++ b/app/src/main/res/layout/fragment_public__exams_.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context=".Public_Exams_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -23,11 +20,12 @@
                 android:divider="@null"
                 android:dividerHeight="20dp"
                 android:scrollbarSize="1dp"
-                android:layout_marginBottom="160dp"
+                android:scrollbars="vertical"
+                android:layout_marginBottom="275dp"
                 />
-        </LinearLayout>
 
 
 
 
-</androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
